Sat Dec 29 20:16:37 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: detect OB status while OFF.

Sat Dec 29 16:40:45 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c:
   - Better handling of unsupported commands (load.off and shutdown.stayoff
     now do the right thing -- indefinite power off -- when possible.
   - Battery test sets CAL instead of OB.
   - Report ups.type as "online" or "standby".

Sat Dec 29 10:39:51 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - docs/new-drivers.txt: If UPS alarms are used, the call to alarm_commit()
   should precede the call to status_commit(), otherwise the ALARM flag
   will be delayed.
 - drivers/megatec.c: Applied the above.

Fri Dec 28 21:58:32 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c:
   - Detect LOAD_OFF weirdness on startup.
   - Limit "load.off" and "shutdown.stayoff" to 9999 minutes because 0000
     makes the load power-on immediately if line power is available and the
     command form without a restore timer isn't supported by all models.
   - Set an alarm instead of changing status on FAILED.
   - Make OFF status independent of OB/OL.

Fri Dec 28 14:58:12 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: Added option to ignore the LOAD_OFF flag.

Thu Dec 27 06:37:50 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Added myself into tha AUTHORS file.

Sun Dec 16 19:53:51 UTC 2007 / 

 - conf/upsstats-single.html.sample, conf/upsstats.html.sample:
   The snmp driver reports 3-phase variables which APC's claims to
   support but returns junk for. Doing IFSUPP against the L2
   variables rather than the L1 ones. [George Ross]

Wed Dec 12 20:29:51 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apcsmart.[ch]: Add support for older Smart-UPS devices.

Wed Dec 12 20:22:39 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
