@@ -1,3 +1,7 @@
+Sat Dec 30 12:16:12 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
+ - drivers/megatec.c: qualify nominal values and frequency as "input" again.
+
 Sat Dec 29 20:16:37 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 
  - drivers/megatec.c: detect OB status while OFF.
